--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "multer": "^2.0.0",
     "pg": "^8.13.1",
     "sequelize": "^6.37.7"
   },
