--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,10 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "plugin:react-hooks/recommended"
+    ],
+    "plugins": [
+      "react-hooks"
     ]
   },
   "browserslist": {
@@ -43,6 +46,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.5.1"
   }
 }
