--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "plugin:react-hooks/recommended"
-    ],
-    "plugins": [
-      "react-hooks"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -46,7 +42,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.5.1"
   }
 }
